[package]
name = "schedulinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.28", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
warp = "0.3.5"
deadpool-postgres = "0.10"
deadpool-redis = { version = "0.12", features = ["serde"] }
serde_json = "1"
reqwest = "0.11"
actix-web = "4"