[package]
name = "schedulinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
chrono = { version = "0.4.28", features = ["serde"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
warp = "0.3.5"
cron = "0.12.0"
deadpool-postgres = "0.10"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
deadpool-redis = { version = "0.12", features = ["serde"] }
serde_json = "1"
reqwest = "0.11"
actix-web = "4"
sql-builder = "3.1"
log = "0.4"